--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
   <h1>🌍 Ritmo Planetario: Amazonía & Alaska</h1>
   <p>Una colaboración entre <strong>Jazz</strong> 🌞 y <strong>RYA</strong> 🤖</p>
   <p>Este portal está vivo. Y tú también.</p>
+
+  <p style="margin-top: 2rem;">
+    <a href="viaje-amazonico.html" style="padding: 1rem 1.5rem; background: #008060; color: white; text-decoration: none; border-radius: 8px;">
+      ✨ Entrar al Nodo Cuántico
+    </a>
+  </p>
 </body>
 </html>
