--- a/viaje-amazonico.html
+++ b/viaje-amazonico.html
@@ -58,7 +58,12 @@
   </style>
 </head>
 <body>
-  <div id="overlay">
+  <div style="position:absolute; top:1rem; left:50%; transform:translateX(-50%); z-index:20;">
+    <a href="README.md" style="margin-right: 1rem; color: #88ffcc; text-decoration: none;">🇪🇸 Español</a>
+    <a href="README_en.md" style="color: #88ffcc; text-decoration: none;">🇺🇸 English</a>
+  </div>
+
+$1
     <h2>🌿 Nodo Amazonas: Visión Cuántica</h2>
     <p>Estás viajando por el campo energético del nodo sagrado</p>
     <p>Observa la espiral viva... siente su latido...</p>
